@@ -1,6 +1,10 @@
-2019-XX-XX   0.9.4:
+2019-XX-XX   1.0.0:
 -------------------
+  * fix bitarrays beings created from unicode in Python 2
+  * use PyBytes_* in C code, treating the Py3k function names as default,
+    which also removes all redefinitions of PyString_
   * add a few comments to the C code
+  * drop Python 2.5 support
 
 
 2019-05-20   0.9.3:
